# muninn

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  GUI_PLAN.md  LICENSE  PROTOCOL.md  README.md  THIRD_PARTY_LICENSES.md  TODO.md  flake.nix  install-gui.bat
linux/: README.md  pyproject.toml  ty.toml
linux/src/muninn/: bt.py  cli.py  crypto.py  protocol.py
python/: README.md  pyproject.toml
python/src/muninn/: cli.py  crypto.py  groups.py  peers.py  protocol.py  storage.py
python/src/muninn/bt/: __init__.py  bluez.py  winrt.py
python/src/muninn/gui/: bridge.py  main.py  models.py  notifications.py  vim.py  writer_lock.py
python/src/muninn/gui/qml/: ChatView.qml  CommandPalette.qml  Composer.qml  CursorTrail.qml  InfoMenu.qml  Main.qml  PeerList.qml  ScanDialog.qml  Transitions.qml
