[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "muninn"
version = "0.1.11"
requires-python = ">=3.11"
dependencies = [
  "PyNaCl",

  # Linux — BlueZ via D-Bus
  "dbus-python; sys_platform == 'linux'",
  "PyGObject; sys_platform == 'linux'",

  # Windows — WinRT namespace packages. winrt-runtime provides the core
  # type marshalling; the Windows.* packages expose the APIs we use.
  "winrt-runtime; sys_platform == 'win32'",
  "winrt-Windows.Devices.Bluetooth; sys_platform == 'win32'",
  "winrt-Windows.Devices.Bluetooth.Rfcomm; sys_platform == 'win32'",
  "winrt-Windows.Devices.Enumeration; sys_platform == 'win32'",
  "winrt-Windows.Foundation; sys_platform == 'win32'",
  "winrt-Windows.Foundation.Collections; sys_platform == 'win32'",
  "winrt-Windows.Networking; sys_platform == 'win32'",
  "winrt-Windows.Networking.Sockets; sys_platform == 'win32'",
  "winrt-Windows.Storage.Streams; sys_platform == 'win32'",
]

[project.optional-dependencies]
gui = ["PySide6"]
# Bundle a standalone .exe on Windows (see python/README.md).
windows-build = ["pyinstaller"]

[project.scripts]
muninn     = "muninn.cli:main"
muninn-gui = "muninn.gui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"muninn.gui" = ["qml/*.qml"]
